Early Bird entfernt - Location verlinkt

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-
+<!--
         <article class="tickets flex flex-column flex-align-center">
             <div class="container">
                 <p class="attention text-c">
@@ -98,20 +98,20 @@
             </div>
             
         </article>
+        -->
 
         <article class="tickets flex flex-column flex-align-center">
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
                     <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:00-21:45 Uhr (Einlass 19 Uhr)<br>
-                    📍 Abenteuerzentrum Berlin
+                    📍 <a href="https://maps.app.goo.gl/PL3ECYqnSKPhkDdt8">Abenteuerzentrum Berlin</a>
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
                         <p class="datum">Samstag, 19. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299191/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -121,14 +121,14 @@
                 <div class="ticket-col">
                     <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:00-21:45 Uhr (Einlass 19:00 Uhr)<br>
-                    📍 Abenteuerzentrum Berlin
+                    📍 <a href="https://maps.app.goo.gl/PL3ECYqnSKPhkDdt8">Abenteuerzentrum Berlin</a>
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
                         <p class="datum">Sonntag, 20. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <span>-20%</span>
+                        <!--<span>-20%</span>-->
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299192/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -138,14 +138,13 @@
                 <div class="ticket-col">
                     <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:15-22:00 Uhr (Einlass 19:15 Uhr)<br>
-                    📍 Abenteuerzentrum Berlin
+                    📍 <a href="https://maps.app.goo.gl/PL3ECYqnSKPhkDdt8">Abenteuerzentrum Berlin</a>
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
                         <p class="datum">Samstag, 03. Mai 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299193/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -154,14 +153,13 @@
                 <div class="ticket-col">
                     <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:15-22:00 Uhr (Einlass 19:15 Uhr)<br>
-                    📍 Abenteuerzentrum Berlin
+                    📍 <a href="https://maps.app.goo.gl/PL3ECYqnSKPhkDdt8">Abenteuerzentrum Berlin</a>
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
                         <p class="datum">Sonntag, 04. Mai 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299194/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
