--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -43,6 +43,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EE56540MFW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EE56540MFW');
+</script>
+
 <body class="flex flex-column">
     <div class="flex flex-align-center">
         <div class="small-logo">
