--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EE56540MFW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EE56540MFW');
+</script>
+
 <body class="start">
     <div class="flex flex-align-center">
         <div class="small-logo">
